test/visibility/import/enablesUnqualified/multipleUnqualified/badName-this.good
badName-this.chpl:5: error: Bad identifier, no known 'this' defined in 'Foo'
